2018-01-18  Karl Berry  <karl@tug.org>

	* cweave.w,
	* common.w,
	* common.c,
	* ../cwebboot.cin: printf %s instead of direct string (from Debian).
	(Also sent to DEK.)

2017-01-29  Karl Berry  <karl@tug.org>

	* ../cwebboot.cin,
	* Makefile,
	* README,
	* common.c,
	* common.h,
	* common.w,
	* ctang-bs.ch,
	* ctangle.w,
	* cweav-bs.ch,
	* cweav-w2c.ch,
	* cweave.w,
	* cweb.el,
	* cwebmac.tex,
	* cwebman.tex,
	* Master/texmf-dist/tex/plain/cweb/cwebmac.tex: sync all with
	cweb 3.64ai from DEK, http://ctan.org/pkg/cweb.
	* cweav-w2c.ch: sync @x blocks with 3.64ai.

2014-06-18  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* comm-w2c.ch, ctang-w2c.ch, cweav-w2c.ch: Avoid useless
	char subscript warnings.

2014-02-12  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* comm-w2c.ch: Handle input lines with CRLF.

2013-07-02  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* comm-w2c.ch: Include system headers after "cpascal.h".

2013-06-28  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* comm-w2c.ch, ctang-w2c.ch, cweav-w2c.ch: Include system
	headers after <kpathsea/kpathsea.h>.

2012-09-05  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* common.w, ctangle.w, cweave.w: copy the original ones in
	ftp://ftp.cs.stanford.edu/pub/cweb/cweb.tar.gz.
	* comm-w2c.ch, ctang-w2c.ch, cweav-w2c.ch: move our changes to change
	files.

2012-09-05  Karl Berry  <karl@tug.org>

	* cweave.w (longest_name): restore to 10000,
	the value in the Knuth/Levy distribution on CTAN
	(which matches Knuth, ftp://ftp.cs.stanford.edu/pub/cweb/cweb.tar.gz)
	Report from Arthur O'Dwyer, 3 Sep 2012 18:06:05.
	
	Our cweave.w has many other changes relative to the original.
	These should be moved to cweav-w2c.ch so our originals are
	unmodified, but can't do everything right now.

2012-05-18  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* {comm,ctang,cweav}-w2c.ch: Use binary mode for output files.
	From Akira Kakuto <kakuto@fuk.kindai.ac.jp> (W32TeX).

2011-04-19  Peter Breitenlohner  <peb@mppmu.mpg.de>
