@@ -202,9 +202,11 @@ extern int include_depth; /* current level of nesting */
 @x common.h l.148 - explicit types.
 extern line[]; /* number of current line in the stacked files */
 extern change_line; /* number of current line in change file */
+extern change_depth; /* where \.{@@y} originated during a change */
 @y
 extern int line[]; /* number of current line in the stacked files */
 extern int change_line; /* number of current line in change file */
+extern int change_depth; /* where \.{@@y} originated during a change */
 @z
 
 @x common.h l.153 - protos now all in cweb.h.
